--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
+
+.marker {
+  background-image: url("https://docs.mapbox.com/help/demos/custom-markers-gl-js/mapbox-icon.png");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
