--- a/src/index.css
+++ b/src/index.css
@@ -88,10 +88,10 @@
 } */
 
 .marker {
-  background-image: url("https://docs.mapbox.com/help/demos/custom-markers-gl-js/mapbox-icon.png");
+  background-image: url("./assets/MapPage/MapPin.svg");
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 51px;
+  height: 63px;
   border-radius: 50%;
   cursor: pointer;
 }
